assets/css/style.css
@import url(https://fonts.bunny.net/css?family=rubik:300,400,700);

:root {
    --primary-font: "Inter", sans-serif;
    --secondary-font: "Rubik", sans-serif;
    --primary-colour: #3a2620;
    /* dark brown */
    --secondary-colour: #aa9581;
    /* light brown */
    --highlight-colour: #416a8e;
    /* blue */
    --highlight-colour-light: #7a9fc2;
    /* light blue */
    /* CSS HEX */
    --shadow-grey: #3b2c35ff;
    --midnight-violet: #2a1f2dff;
    --spring-green: #31e981ff;
    --pacific-blue: #75b8c8ff;
    --dusty-rose: #cd8b76ff;
    /* CSS HEX */
    --rosy-copper: #d5573bff;
    --smoky-rose: #885053ff;
    --tea-green: #c6ecaeff;
    --pacific-blue: #75b8c8ff;
    --baltic-blue: #33658aff;
}

body {
    font-family: var(--primary-font);
    /* Leave room for the fixed navbar */
    padding-top: 58px;
}

#navbar {
    background-color: #eeeeff;
}

h1,
h2,
h3 {
    font-family: var(--secondary-font);
    color: var(--primary-colour);
}

h1 {
    text-transform: uppercase;
}

h2 {
    margin-bottom: 2rem;
}

section {
    padding: 1rem;
    margin: 2rem 0;
    background: #f2fff2;
}

/* A button that is full-width until the screen reaches large (992px) */
.vary-button {
    width: 100%;
}

/* Hero section */
#hero {
    height: 600px;
    /*width: 100%;*/
    background-image: url("../images/hands-transparent-600.png"), linear-gradient(white, #00a);
    background-repeat: no-repeat, no-repeat;
    background-position:
        right center,
        left top;
    background-size: contain, contain;
    position: relative;
}

/* Contact section */
.submit-button-container {
    display: flex;
    align-items: flex-end;
    justify-content: right;
}

/* Footer */
footer {
    padding: 1.25rem 0;
}

/* Medium devices, tablets and up */
@media screen and (min-width: 768px) {
    /* move the hero image away from the right margin */
    #hero {
        background-position:
            right 10rem top 0,
            left center;
    }

    /* vertically centre the hero text on larger screens */
    .hero-text-container {
        margin-top: 200px;
    }
}

/* Large devices, small laptops and up */
@media screen and (min-width: 992px) {
    /* Don't use full width buttons on larger screens */
    .vary-button {
        width: auto;
    }
}

